--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Net-OBEX
-version: 0.003
+version: 0.004
 author:
   - 'Zoffix Znet <zoffix@cpan.org>'
 abstract: implementation of OBEX protocol
@@ -10,6 +10,7 @@ resources:
 requires:
   Carp: 1.04
   Class::Data::Accessor: 0.04001
+  Devel::TakeHashArgs: 0.002
   IO::Handle: 1.27
   Net::OBEX::Packet::Headers: 0.002
   Net::OBEX::Packet::Request: 0.003
@@ -20,7 +21,7 @@ build_requires:
 provides:
   Net::OBEX:
     file: lib/Net/OBEX.pm
-    version: 0.003
+    version: 0.004
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
