Import of ZOFFIX/Net-OBEX-0.005 from CPAN.
gitpan-cpan-distribution: Net-OBEX
gitpan-cpan-version:      0.005
gitpan-cpan-path:         ZOFFIX/Net-OBEX-0.005.tar.gz
gitpan-cpan-author:       ZOFFIX
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
 ---
 name: Net-OBEX
-version: 0.004
+version: 0.005
 author:
   - 'Zoffix Znet <zoffix@cpan.org>'
 abstract: implementation of OBEX protocol
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
+build_requires:
+  Test::More: 0
 requires:
   Carp: 1.04
   Class::Data::Accessor: 0.04001
@@ -16,13 +18,13 @@ requires:
   Net::OBEX::Packet::Request: 0.003
   Net::OBEX::Response: 0.002
   Socket::Class: 1.13
-build_requires:
-  Test::More: 0
+configure_requires:
+  Module::Build: 0.34
 provides:
   Net::OBEX:
     file: lib/Net/OBEX.pm
-    version: 0.004
-generated_by: Module::Build version 0.2808
+    version: 0.005
+generated_by: Module::Build version 0.34
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
